--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ APIKey = c10406808a6f8e1c0dfd8028a56f1ab6
 Moviesurl = https://api.themoviedb.org/3
 EMAIL_USERNAME = dmadhusudhan98@gmail.com
 EMAIL_PASSWORD = lfga pxgo yxmm lxqk
-Rest_URL = https://netflix-backend-code.onrender.com/api/reset-password
+Rest_URL = https://netflix-front-end-seven.vercel.app/resetpassword/
