update the database code

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT="8000"
-database =mongodb+srv://madhusudhan:Dmadhusudhan123@cluster0.duqmdv1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+database =mongodb+srv://dmadhusudhan98:Dmadhusudhan123@cluster0.v0oh4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWTPRIVATEKEY = this is the madhusudhan
 APIKey = c10406808a6f8e1c0dfd8028a56f1ab6
 Moviesurl = https://api.themoviedb.org/3
 EMAIL_USERNAME = dmadhusudhan98@gmail.com
 EMAIL_PASSWORD = lfga pxgo yxmm lxqk
-Rest_URL = https://netflix-front-end-seven.vercel.app/resetpassword/
+Rest_URL = https://netflix-front-end-zeta.vercel.app/resetpassword/
